force-app/main/default/objects/Question_Answer_Option__c/Question_Answer_Option__c.object-meta.xml
<CustomObject>
    <description>This object is used for holding Question Answer Options</description>
    <label>Question Answer Option</label>
    <nameField>
        <displayFormat>QAO-{00000}</displayFormat>
        <label>Question Answer Option</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>