force-app/main/default/objects/Question_Answer_Option__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <referenceTo>Answer__c</referenceTo>
    <relationshipName>Answer_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>