force-app/main/default/objects/Question_Answer_Option__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <formula>Answer__r.Answer_Text__c</formula>
    <label>Answer Text</label>
    <type>Text</type>
</CustomField>