force-app/main/default/objects/Question_Answer_Option__c/fields/Question_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Data_Type__c</fullName>
    <formula>TEXT(Question__r.Question_Data_type__c)</formula>
    <label>Question Data Type</label>
    <type>Text</type>
</CustomField>