force-app/main/default/objects/Question_Answer_Option__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <formula>TEXT( Question__r.Question_Type__c )</formula>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>